--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+claros-voyager (0.1.1) unstable; urgency=low
+
+  * Updates for Django 1.7
+
+ -- Alexander Dutton <alexander.dutton@it.ox.ac.uk>  Tue, 24 Nov 2015 15:10:13 +0000
+
 claros-voyager (0.1) unstable; urgency=low
 
   * Initial release.
